--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "tailwind-merge": "^3.3.1",
-        "tailwindcss": "^4.1.16"
+        "tailwindcss": "^4.1.16",
+        "vaul": "^1.1.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.36.0",
